# installable-streamlit-app

./: .gitignore  README.md  pyproject.toml
my_package/: __init__.py  app.py  my_module.py
my_package/pages/: page_1.py  page_2.py
